--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
+  <meta name="keywords"
+    content="mehmonhonalar, restoranlar, ziyorangohlar, ko'ngilochar joylar, tabiat, tabiatga sayohat, zakas mehmonhona, parklar, ko'ngilochar joylar, travel, sayohat, qashqadaryotravel, qashqadaryo">
+  <meta name="author" content="Behrubek Xonniyozov, Alisher Sodiqov">
+  <meta name="robots" content="index, folow">
+  <link rel="canoncial" href="Kashkadaryotravel.uz">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <title>travel Uz Kashkadaryo</title>
+
+  <title>Kashkadaryotravel</title>
 </head>
 
 <body>
