--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="https://bookatour.me/uploads/images/ad89aac0e38f89f6d9974aa140a529b0.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Qashqadaryoda biz bilan sayohat qiling" />
   <meta name="keywords"
     content="mehmonhonalar, restoranlar, ziyorangohlar, ko'ngilochar joylar, tabiat, tabiatga sayohat, zakas mehmonhona, parklar, ko'ngilochar joylar, travel, sayohat, qashqadaryotravel, qashqadaryo">
   <meta name="author" content="Behrubek Xonniyozov, Alisher Sodiqov">
